--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 
 services:
+  redis:
+    image: redis:5
+    restart: always
+    container_name: redis-server
+    ports: 
+      - 6379:6379
   web:
     build: .
     command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
@@ -9,3 +15,6 @@ services:
       - .:/django_channels_app
     ports:
       - "8000:8000"
+
+
+
